Fixed typo in Tuples.tex.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10247 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Tuples.tex
+++ b/spec/Tuples.tex
@@ -58,7 +58,7 @@ Given a tuple expression \chpl{(1, 2)}, the type of the tuple value is
 \index{assignment!tuples}
 \index{tuples!assignment}
 
-In tuple assignment, the compoonents of the tuple on the left-hand
+In tuple assignment, the components of the tuple on the left-hand
 side of the assignment operator are each assigned the components of
 the tuple on the right-hand side of the assignment.  The assignments
 are simultaneous so that each component expression on the right-hand
