Added a suggestionbox environment to the spec.  This environment is intended to be used to identify language issues where we would be interested in getting user feedback.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10257 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -54,6 +54,13 @@
 \end{quote}
 }
 
+\newenvironment{suggestionbox}{
+\begin{quote}
+{\it Suggestions?}
+}{
+\end{quote}
+}
+
 \newcommand{\rsec}[1]
            {\S\ref{#1}}
 
