Fix problems with the outer pointer for generic nested classes.  Though it took a long time to track down, this was actually a fairly trivial change. I just had to change the way the outer pointer is defined and assigned to in the constructor.  The instantiations then fell out.
Also, make nprint_view return instead of dereferencing NULL when given a NULL
AST.  I've found myself making gdb abort by accidentally trying to view NULL.

Fix a minor typo I found while reading the Generics section of the spec.

Add the beginnings of a double linked list example using a nested Node class.
Currently, has methods to add to front and back, a default front-to-back
iterator and a backward iterator.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10273 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -293,7 +293,7 @@ The following code defines another class called \chpl{Node} that
 implements a linked list data structure.  It is generic over the type
 of the element contained in the linked list.  This code does not
 specify the element type directly in the class as a type alias but
-rather leaves omits the type from the \chpl{data} field.
+rather omits the type from the \chpl{data} field.
 \begin{chapel}
 class Node {
   var data;
