--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -51,6 +51,7 @@
 \newcommand{\fnname}[1]{\chpl{#1}}
 
 \lstnewenvironment{chapel}{\lstset{language=chapel,xleftmargin=2pc,stepnumber=0}}{}
+\lstnewenvironment{chapel0}{\lstset{language=chapel,stepnumber=0}}{}
 
 \lstnewenvironment{numberedchapel}{\lstset{language=chapel,xleftmargin=15pt,stepnumber=1}}{}
 
