Small edit to CHANGES that was sitting in my directory.
Updates to STATUS and FUTURES based on Steve's big change.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10301 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/CHANGES
+++ b/CHANGES
@@ -12,7 +12,7 @@ Second preliminary release of Chapel Compiler, June 2007
 High-Level Themes:
 - single-locale, multiple threads
 - support for additional serial features
-- improved single-threaded performance
+- improved single-threaded performance, memory utilization
 - improved multi-threaded correctness
 - target audience: HPLS evaluation team, HPCS mission partners, 
   select HPC users and centers
